# my-design-platform

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/mcp_platform/: __init__.py  main.py  server.py
src/mcp_platform/jobs/: __init__.py  queue.py  worker.py
src/mcp_platform/servers/: base.py  scaffold_tool.py
tests/integration/: test_notes_persistence.py  test_plugin_architecture.py
tests/unit/: test_plugin_architecture_unit.py  test_queue.py  test_server.py  test_worker.py
