[project]
name = "my-design-platform"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.10.1",
    "redis>=6.2.0",
    "fakeredis>=2.30.1"
]

[[project.authors]]
name = "revanshine"
email = "bothy_jarmo@vpseudo.com"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_platform"]

[project.scripts]
my-design-platform = "mcp_platform:main"
